some changes in openapi
