# openapi.json
@@ -73,11 +73,11 @@
           "200": {
             "description": "successful operation"
           },
-          "401": {
+          "404": {
             "description": "There isn's books published in that year"
           },
           "501": {
-            "description": "Method not implemented for requested resource"
+            "description": "Method not implemented for requested resource.Please use the right method or check the right input for the path."
           }
         }
       }
@@ -104,6 +104,12 @@
         "responses": {
           "200": {
             "description": "successful operation"
+          },
+          "404": {
+            "description": "There isn's books with given ID"
+          },
+          "501": {
+            "description": "Method not implemented for requested resource.Please use the right method or check the right input for the path."
           }
         }
       },
@@ -129,11 +135,11 @@
           "200": {
             "description": "successful operation"
           },
-          "401": {
+          "404": {
             "description": "There isn's books with given ID"
           },
           "501": {
-            "description": "Method not implemented for requested resource"
+            "description": "Method not implemented for requested resource.Please use the right method or check the right input for the path."
           }
         }
       },
@@ -168,11 +174,11 @@
           "200": {
             "description": "successful operation"
           },
-          "401": {
+          "404": {
             "description": "There isn's books with given ID"
           },
           "501": {
-            "description": "Method not implemented for requested resource"
+            "description": "Method not implemented for requested resource. Please use the right method or check the right input for the path."
           }
         }
       }
@@ -225,6 +231,12 @@
             "schema": {
               "$ref": "#/definitions/Authors"
             }
+          },
+          "404": {
+            "description": "There isn's autor with given ID"
+          },
+          "501": {
+            "description": "Method not implemented for requested resource. Please use the right method or check the right input for the path."
           }
         }
       }
@@ -257,6 +269,9 @@
             "schema": {
               "$ref": "#/definitions/AuthorsBody"
             }
+          },
+          "400": {
+            "description": "Author with given ID already exist!"
           }
         }
       }
